--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/desa2/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <main>
         <div class="contactos">
             <div class="maria">
-                <img src="/desa2/assets/img/maria.jpg" alt="foto de maría">
+                <img src="assets/img/maria.jpg" alt="foto de maría">
                 <div class="mariaestado">
                 <h2>María</h2>
                 <p>Activa ahora</p></div>
@@ -28,56 +28,56 @@
                     <button>Nuevo Chat</button>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/juanita.jpg" alt="foto de maría">
+                <img src="assets/img/juanita.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>Juanita</h2>
                     <p>At vero eos et accusa</p>
                 </div>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/alberto.jpg" alt="foto de maría">
+                <img src="assets/img/alberto.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>Alberto</h2>
                     <p>blanditiis praesentium</p>
                 </div>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/ignacio.jpg" alt="foto de maría">
+                <img src="assets/img/ignacio.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>Ignacio</h2>
                     <p>officiis debitis aut</p>
                 </div>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/cristian.jpg" alt="foto de maría">
+                <img src="assets/img/cristian.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>Cristian</h2>
                     <p>Nam libero tempore</p>
                 </div>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/majo.jpg" alt="foto de maría">
+                <img src="assets/img/majo.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>María José</h2>
                     <p>impedit quo minus id</p>
                 </div>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/gonzalo.jpg" alt="foto de maría">
+                <img src="assets/img/gonzalo.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>Gonzalo</h2>
                     <p>At vero eos et accusa</p>
                 </div>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/juanpa.jpg" alt="foto de maría">
+                <img src="assets/img/juanpa.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>Juan Pablo</h2>
                     <p>necessitatibus saepe</p>
                 </div>
             </div>
             <div class="otros">
-                <img src="/desa2/assets/img/magda.jpg" alt="foto de maría">
+                <img src="assets/img/magda.jpg" alt="foto de maría">
                 <div class="estadoamigos">
                     <h2>Magdalena</h2>
                     <p>ut et voluptates</p>
@@ -85,7 +85,7 @@
             </div>     
         </div>
         <div class="chat">
-            <img src="/desa2/assets/img/hand.png" alt="Logo">
+            <img src="assets/img/hand.png" alt="Logo">
             <div class="textonet">
                 <h1>Comienza el Networking</h1>
                 <p>Presiona el botón <strong>"Nuevo chat"</strong> para comenzar a crear nuevas 
